frontend/antlr4/CalculatorParser.cpp

// Generated from /Users/zenglj/Documents/GitDatabase/calculator/frontend/antlr4/Calculator.g4 by ANTLR 4.12.0


#include "CalculatorVisitor.h"

#include "CalculatorParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CalculatorParserStaticData final {
  CalculatorParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CalculatorParserStaticData(const CalculatorParserStaticData&) = delete;
  CalculatorParserStaticData(CalculatorParserStaticData&&) = delete;
  CalculatorParserStaticData& operator=(const CalculatorParserStaticData&) = delete;
  CalculatorParserStaticData& operator=(CalculatorParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag calculatorParserOnceFlag;
CalculatorParserStaticData *calculatorParserStaticData = nullptr;

void calculatorParserInitialize() {
  assert(calculatorParserStaticData == nullptr);
  auto staticData = std::make_unique<CalculatorParserStaticData>(
    std::vector<std::string>{
      "compileUnit", "funcDef", "funcFormalParams", "funcFormalParam", "funcBasicParam", 
      "block", "blockItemList", "blockItem", "statement", "expr", "addExp", 
      "addOp", "unaryExp", "primaryExp", "realParamList", "lVal"
    },
    std::vector<std::string>{
      "", "'('", "')'", "','", "'{'", "'}'", "'='", "';'", "'+'", "'-'", 
      "'function'", "'return'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "T_ADD", "T_SUB", "T_FUNC", "T_RETURN", 
      "T_ID", "T_DIGIT", "WS", "LineComment", "MultiLineComment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  calculatorParserStaticData = staticData.release();
}

}

CalculatorParser::CalculatorParser(TokenStream *input) : CalculatorParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CalculatorParser::CalculatorParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CalculatorParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *calculatorParserStaticData->atn, calculatorParserStaticData->decisionToDFA, calculatorParserStaticData->sharedContextCache, options);
}

CalculatorParser::~CalculatorParser() {
  delete _interpreter;
}

const atn::ATN& CalculatorParser::getATN() const {
  return *calculatorParserStaticData->atn;
}

std::string CalculatorParser::getGrammarFileName() const {
  return "Calculator.g4";
}

const std::vector<std::string>& CalculatorParser::getRuleNames() const {
  return calculatorParserStaticData->ruleNames;
}

const dfa::Vocabulary& CalculatorParser::getVocabulary() const {
  return calculatorParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CalculatorParser::getSerializedATN() const {
  return calculatorParserStaticData->serializedATN;
}


//----------------- CompileUnitContext ------------------------------------------------------------------

CalculatorParser::CompileUnitContext::CompileUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CalculatorParser::StatementContext *> CalculatorParser::CompileUnitContext::statement() {
  return getRuleContexts<CalculatorParser::StatementContext>();
}

CalculatorParser::StatementContext* CalculatorParser::CompileUnitContext::statement(size_t i) {
  return getRuleContext<CalculatorParser::StatementContext>(i);
}

std::vector<CalculatorParser::FuncDefContext *> CalculatorParser::CompileUnitContext::funcDef() {
  return getRuleContexts<CalculatorParser::FuncDefContext>();
}

CalculatorParser::FuncDefContext* CalculatorParser::CompileUnitContext::funcDef(size_t i) {
  return getRuleContext<CalculatorParser::FuncDefContext>(i);
}


size_t CalculatorParser::CompileUnitContext::getRuleIndex() const {
  return CalculatorParser::RuleCompileUnit;
}


std::any CalculatorParser::CompileUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitCompileUnit(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::CompileUnitContext* CalculatorParser::compileUnit() {
  CompileUnitContext *_localctx = _tracker.createInstance<CompileUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, CalculatorParser::RuleCompileUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(34);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case CalculatorParser::T__0:
        case CalculatorParser::T_RETURN:
        case CalculatorParser::T_ID:
        case CalculatorParser::T_DIGIT: {
          setState(32);
          statement();
          break;
        }

        case CalculatorParser::T_FUNC: {
          setState(33);
          funcDef();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(36); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 15362) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDefContext ------------------------------------------------------------------

CalculatorParser::FuncDefContext::FuncDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CalculatorParser::FuncDefContext::T_FUNC() {
  return getToken(CalculatorParser::T_FUNC, 0);
}

tree::TerminalNode* CalculatorParser::FuncDefContext::T_ID() {
  return getToken(CalculatorParser::T_ID, 0);
}

CalculatorParser::BlockContext* CalculatorParser::FuncDefContext::block() {
  return getRuleContext<CalculatorParser::BlockContext>(0);
}

CalculatorParser::FuncFormalParamsContext* CalculatorParser::FuncDefContext::funcFormalParams() {
  return getRuleContext<CalculatorParser::FuncFormalParamsContext>(0);
}


size_t CalculatorParser::FuncDefContext::getRuleIndex() const {
  return CalculatorParser::RuleFuncDef;
}


std::any CalculatorParser::FuncDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitFuncDef(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::FuncDefContext* CalculatorParser::funcDef() {
  FuncDefContext *_localctx = _tracker.createInstance<FuncDefContext>(_ctx, getState());
  enterRule(_localctx, 2, CalculatorParser::RuleFuncDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    match(CalculatorParser::T_FUNC);
    setState(39);
    match(CalculatorParser::T_ID);
    setState(40);
    match(CalculatorParser::T__0);
    setState(42);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CalculatorParser::T_ID) {
      setState(41);
      funcFormalParams();
    }
    setState(44);
    match(CalculatorParser::T__1);
    setState(45);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncFormalParamsContext ------------------------------------------------------------------

CalculatorParser::FuncFormalParamsContext::FuncFormalParamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CalculatorParser::FuncFormalParamContext *> CalculatorParser::FuncFormalParamsContext::funcFormalParam() {
  return getRuleContexts<CalculatorParser::FuncFormalParamContext>();
}

CalculatorParser::FuncFormalParamContext* CalculatorParser::FuncFormalParamsContext::funcFormalParam(size_t i) {
  return getRuleContext<CalculatorParser::FuncFormalParamContext>(i);
}


size_t CalculatorParser::FuncFormalParamsContext::getRuleIndex() const {
  return CalculatorParser::RuleFuncFormalParams;
}


std::any CalculatorParser::FuncFormalParamsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitFuncFormalParams(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::FuncFormalParamsContext* CalculatorParser::funcFormalParams() {
  FuncFormalParamsContext *_localctx = _tracker.createInstance<FuncFormalParamsContext>(_ctx, getState());
  enterRule(_localctx, 4, CalculatorParser::RuleFuncFormalParams);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    funcFormalParam();
    setState(52);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CalculatorParser::T__2) {
      setState(48);
      match(CalculatorParser::T__2);
      setState(49);
      funcFormalParam();
      setState(54);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncFormalParamContext ------------------------------------------------------------------

CalculatorParser::FuncFormalParamContext::FuncFormalParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CalculatorParser::FuncBasicParamContext* CalculatorParser::FuncFormalParamContext::funcBasicParam() {
  return getRuleContext<CalculatorParser::FuncBasicParamContext>(0);
}


size_t CalculatorParser::FuncFormalParamContext::getRuleIndex() const {
  return CalculatorParser::RuleFuncFormalParam;
}


std::any CalculatorParser::FuncFormalParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitFuncFormalParam(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::FuncFormalParamContext* CalculatorParser::funcFormalParam() {
  FuncFormalParamContext *_localctx = _tracker.createInstance<FuncFormalParamContext>(_ctx, getState());
  enterRule(_localctx, 6, CalculatorParser::RuleFuncFormalParam);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    funcBasicParam();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncBasicParamContext ------------------------------------------------------------------

CalculatorParser::FuncBasicParamContext::FuncBasicParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CalculatorParser::FuncBasicParamContext::T_ID() {
  return getToken(CalculatorParser::T_ID, 0);
}


size_t CalculatorParser::FuncBasicParamContext::getRuleIndex() const {
  return CalculatorParser::RuleFuncBasicParam;
}


std::any CalculatorParser::FuncBasicParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitFuncBasicParam(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::FuncBasicParamContext* CalculatorParser::funcBasicParam() {
  FuncBasicParamContext *_localctx = _tracker.createInstance<FuncBasicParamContext>(_ctx, getState());
  enterRule(_localctx, 8, CalculatorParser::RuleFuncBasicParam);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    match(CalculatorParser::T_ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

CalculatorParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CalculatorParser::BlockItemListContext* CalculatorParser::BlockContext::blockItemList() {
  return getRuleContext<CalculatorParser::BlockItemListContext>(0);
}


size_t CalculatorParser::BlockContext::getRuleIndex() const {
  return CalculatorParser::RuleBlock;
}


std::any CalculatorParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::BlockContext* CalculatorParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 10, CalculatorParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    match(CalculatorParser::T__3);
    setState(61);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 14338) != 0)) {
      setState(60);
      blockItemList();
    }
    setState(63);
    match(CalculatorParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockItemListContext ------------------------------------------------------------------

CalculatorParser::BlockItemListContext::BlockItemListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CalculatorParser::BlockItemContext *> CalculatorParser::BlockItemListContext::blockItem() {
  return getRuleContexts<CalculatorParser::BlockItemContext>();
}

CalculatorParser::BlockItemContext* CalculatorParser::BlockItemListContext::blockItem(size_t i) {
  return getRuleContext<CalculatorParser::BlockItemContext>(i);
}


size_t CalculatorParser::BlockItemListContext::getRuleIndex() const {
  return CalculatorParser::RuleBlockItemList;
}


std::any CalculatorParser::BlockItemListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitBlockItemList(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::BlockItemListContext* CalculatorParser::blockItemList() {
  BlockItemListContext *_localctx = _tracker.createInstance<BlockItemListContext>(_ctx, getState());
  enterRule(_localctx, 12, CalculatorParser::RuleBlockItemList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(65);
      blockItem();
      setState(68); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 14338) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockItemContext ------------------------------------------------------------------

CalculatorParser::BlockItemContext::BlockItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CalculatorParser::StatementContext* CalculatorParser::BlockItemContext::statement() {
  return getRuleContext<CalculatorParser::StatementContext>(0);
}


size_t CalculatorParser::BlockItemContext::getRuleIndex() const {
  return CalculatorParser::RuleBlockItem;
}


std::any CalculatorParser::BlockItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitBlockItem(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::BlockItemContext* CalculatorParser::blockItem() {
  BlockItemContext *_localctx = _tracker.createInstance<BlockItemContext>(_ctx, getState());
  enterRule(_localctx, 14, CalculatorParser::RuleBlockItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CalculatorParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CalculatorParser::StatementContext::getRuleIndex() const {
  return CalculatorParser::RuleStatement;
}

void CalculatorParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExpressionShowStatementContext ------------------------------------------------------------------

CalculatorParser::ExprContext* CalculatorParser::ExpressionShowStatementContext::expr() {
  return getRuleContext<CalculatorParser::ExprContext>(0);
}

CalculatorParser::ExpressionShowStatementContext::ExpressionShowStatementContext(StatementContext *ctx) { copyFrom(ctx); }


std::any CalculatorParser::ExpressionShowStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitExpressionShowStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignStatementContext ------------------------------------------------------------------

tree::TerminalNode* CalculatorParser::AssignStatementContext::T_ID() {
  return getToken(CalculatorParser::T_ID, 0);
}

CalculatorParser::ExprContext* CalculatorParser::AssignStatementContext::expr() {
  return getRuleContext<CalculatorParser::ExprContext>(0);
}

CalculatorParser::AssignStatementContext::AssignStatementContext(StatementContext *ctx) { copyFrom(ctx); }


std::any CalculatorParser::AssignStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitAssignStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExpressionStatementContext ------------------------------------------------------------------

CalculatorParser::ExprContext* CalculatorParser::ExpressionStatementContext::expr() {
  return getRuleContext<CalculatorParser::ExprContext>(0);
}

CalculatorParser::ExpressionStatementContext::ExpressionStatementContext(StatementContext *ctx) { copyFrom(ctx); }


std::any CalculatorParser::ExpressionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitExpressionStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnStatementContext ------------------------------------------------------------------

tree::TerminalNode* CalculatorParser::ReturnStatementContext::T_RETURN() {
  return getToken(CalculatorParser::T_RETURN, 0);
}

CalculatorParser::ExprContext* CalculatorParser::ReturnStatementContext::expr() {
  return getRuleContext<CalculatorParser::ExprContext>(0);
}

CalculatorParser::ReturnStatementContext::ReturnStatementContext(StatementContext *ctx) { copyFrom(ctx); }


std::any CalculatorParser::ReturnStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitReturnStatement(this);
  else
    return visitor->visitChildren(this);
}
CalculatorParser::StatementContext* CalculatorParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 16, CalculatorParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<CalculatorParser::AssignStatementContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(72);
      match(CalculatorParser::T_ID);
      setState(73);
      match(CalculatorParser::T__5);
      setState(74);
      expr();
      setState(75);
      match(CalculatorParser::T__6);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<CalculatorParser::ExpressionStatementContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(77);
      expr();
      setState(78);
      match(CalculatorParser::T__6);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<CalculatorParser::ExpressionShowStatementContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(80);
      expr();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<CalculatorParser::ReturnStatementContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(81);
      match(CalculatorParser::T_RETURN);
      setState(82);
      expr();
      setState(83);
      match(CalculatorParser::T__6);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

CalculatorParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CalculatorParser::AddExpContext* CalculatorParser::ExprContext::addExp() {
  return getRuleContext<CalculatorParser::AddExpContext>(0);
}


size_t CalculatorParser::ExprContext::getRuleIndex() const {
  return CalculatorParser::RuleExpr;
}


std::any CalculatorParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::ExprContext* CalculatorParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 18, CalculatorParser::RuleExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    addExp();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AddExpContext ------------------------------------------------------------------

CalculatorParser::AddExpContext::AddExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CalculatorParser::UnaryExpContext *> CalculatorParser::AddExpContext::unaryExp() {
  return getRuleContexts<CalculatorParser::UnaryExpContext>();
}

CalculatorParser::UnaryExpContext* CalculatorParser::AddExpContext::unaryExp(size_t i) {
  return getRuleContext<CalculatorParser::UnaryExpContext>(i);
}

std::vector<CalculatorParser::AddOpContext *> CalculatorParser::AddExpContext::addOp() {
  return getRuleContexts<CalculatorParser::AddOpContext>();
}

CalculatorParser::AddOpContext* CalculatorParser::AddExpContext::addOp(size_t i) {
  return getRuleContext<CalculatorParser::AddOpContext>(i);
}


size_t CalculatorParser::AddExpContext::getRuleIndex() const {
  return CalculatorParser::RuleAddExp;
}


std::any CalculatorParser::AddExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitAddExp(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::AddExpContext* CalculatorParser::addExp() {
  AddExpContext *_localctx = _tracker.createInstance<AddExpContext>(_ctx, getState());
  enterRule(_localctx, 20, CalculatorParser::RuleAddExp);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    unaryExp();
    setState(95);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CalculatorParser::T_ADD

    || _la == CalculatorParser::T_SUB) {
      setState(90);
      addOp();
      setState(91);
      unaryExp();
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AddOpContext ------------------------------------------------------------------

CalculatorParser::AddOpContext::AddOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CalculatorParser::AddOpContext::T_ADD() {
  return getToken(CalculatorParser::T_ADD, 0);
}

tree::TerminalNode* CalculatorParser::AddOpContext::T_SUB() {
  return getToken(CalculatorParser::T_SUB, 0);
}


size_t CalculatorParser::AddOpContext::getRuleIndex() const {
  return CalculatorParser::RuleAddOp;
}


std::any CalculatorParser::AddOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitAddOp(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::AddOpContext* CalculatorParser::addOp() {
  AddOpContext *_localctx = _tracker.createInstance<AddOpContext>(_ctx, getState());
  enterRule(_localctx, 22, CalculatorParser::RuleAddOp);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    _la = _input->LA(1);
    if (!(_la == CalculatorParser::T_ADD

    || _la == CalculatorParser::T_SUB)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryExpContext ------------------------------------------------------------------

CalculatorParser::UnaryExpContext::UnaryExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CalculatorParser::PrimaryExpContext* CalculatorParser::UnaryExpContext::primaryExp() {
  return getRuleContext<CalculatorParser::PrimaryExpContext>(0);
}

tree::TerminalNode* CalculatorParser::UnaryExpContext::T_ID() {
  return getToken(CalculatorParser::T_ID, 0);
}

CalculatorParser::RealParamListContext* CalculatorParser::UnaryExpContext::realParamList() {
  return getRuleContext<CalculatorParser::RealParamListContext>(0);
}


size_t CalculatorParser::UnaryExpContext::getRuleIndex() const {
  return CalculatorParser::RuleUnaryExp;
}


std::any CalculatorParser::UnaryExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalculatorVisitor*>(visitor))
    return parserVisitor->visitUnaryExp(this);
  else
    return visitor->visitChildren(this);
}

CalculatorParser::UnaryExpContext* CalculatorParser::unaryExp() {
  UnaryExpContext *_localctx = _tracker.createInstance<UnaryExpContext>(_ctx, getState());
  enterRule(_localctx, 24, CalculatorParser::RuleUnaryExp);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(100);
      primaryExp();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(101);
      match(CalculatorParser::T_ID);
      setState(102);
      match(CalculatorParser::T__0);
      setState(104);
      _errHandler->sync(this);
